[package]
name = "foodsbot"
version = "0.1.0"
authors = ["A.Stadler <adamv.stadler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
slack = "0.23.0"